@@ -316,6 +316,17 @@ install.packages <-
            }
         }
     }
+    
+    ## check if we should infer the type
+    if (length(pkgs) == 1L && is.null(repos) && type == "both") {
+    	if (  (type2 %in% "win.binary" && grepl("[.]zip$", pkgs))
+	    ||(substr(type2, 1L, 10L) == "mac.binary"
+		   && grepl("[.]tgz$", pkgs))) {
+	    type <- type2
+	} else if (grepl("[.]tar[.](gz|bz2|xz)$", pkgs)) {
+	    type <- "source"
+       }
+    }
 
     if(is.null(repos) && missing(contriburl)) {
         tmpd <- destdir
